--- a/pizza_form/form.html
+++ b/pizza_form/form.html
@@ -27,7 +27,7 @@
       </p>
 
       <p>
-        <label for="">Pizza toppings (check all that apply)</label>
+        <label for="topping">Pizza toppings (check all that apply)</label>
         <br>
         <input type="checkbox" name="topping[]" value"Cheese" checked> Cheese<br>
         <input type="checkbox" name="topping[]" value"Mushrooms"> Mushrooms<br>
