--- a/pizza_form/form.html
+++ b/pizza_form/form.html
@@ -5,6 +5,9 @@
     <title>Pizza Form</title>
     <style media="screen">
       p,h1 { text-align: center}
+      h1 {color: red;}
+      p {color: pink;}
+      body {background-color: black;}
       </style>
   </head>
   <body>
