--- a/pizza_form/form.html
+++ b/pizza_form/form.html
@@ -7,7 +7,7 @@
       p,h1 { text-align: center}
       h1 {color: red;}
       p {color: pink;}
-      body {background-color: black;}
+      /* body {background-color: black;} */
       </style>
   </head>
   <body>
@@ -26,8 +26,44 @@
 
       <p>
       <label for="address">Address</label>
-      <input type="text" name="address" value="" placeholder="1234 street City, ST, ZIP">
+      <input type="text" name="address" value="" placeholder="1234 street">
       </p>
+
+      <p>
+      <label for="suite">Suite</label>
+      <input type="text" name="suite" value="" placeholder="">
+      </p>
+
+      <p>
+      <label for="city">City: </label>
+      <input type="text" name="city" value="" placeholder="">
+      </p>
+
+      <p>
+      <label for="state">State: </label>
+      <input type="text" name="state" value="" placeholder="ST">
+      </p>
+
+      <p>
+      <label for="zip">Zip:</label>
+      <input type="text" name="zip" value="" placeholder="11111">
+      </p>
+
+      <p>
+      <label for="Size">Size</label><br>
+      <select name="cheese" id="">
+      <option value="regular">Regular</option>
+      <option value="extra">Extra</option>
+      </select>
+      </br></p>
+
+      <p>
+      <label for="Amount Cheese">Amount Cheese</label><br>
+      <input type="radio" name="Cheese" value="Normal">Normal<br>
+      <input type="radio" name="Cheese" value="Extra">Extra<br>
+      <input type="radio" name="Cheese" value="Very Extra">Very Extra<br>
+      </br></p>
+
 
       <p>
         <label for="topping">Pizza toppings (check all that apply)</label>
