--- a/pizza_form/form.html
+++ b/pizza_form/form.html
@@ -7,7 +7,7 @@
       p,h1 { text-align: center}
       h1 {color: red;}
       p {color: pink;}
-      /* body {background-color: black;} */
+      body {background-color: black;}
       </style>
   </head>
   <body>
